@@ -1,3 +1,13 @@
+ocaml-unit-1.0.0
+ 
+  - Add bracket support (Thanks go to Laurent Vaucher)
+
+  - Add an example for bracket usage
+
+ocaml-unit-0.1.0
+
+  - Makefile improvements
+
 ocaml-unit-0.0.3
 
   - Added findlib support
